# nlp-insights

./: .coverage  .env.example  .gitignore  100_PERCENT_ACHIEVED.md  360_DEGREE_TEST_PLAN.md  ACCEPTANCE_CHECKLIST.md  APP_ENHANCEMENTS.md  APP_STATUS.md  COMPLETE_TEST_SUMMARY.md  COVERAGE_MILESTONE_30_PERCENT.md  COVERAGE_STATUS_REPORT.md  DELIVERY_NOTES.md  FINAL_COVERAGE_REPORT.md  FINAL_STATUS.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  LICENSE  NEW_FEATURES_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READY.md  PROGRESS_UPDATE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  READY_FOR_REVIEW.md  START_HERE.md  TESTING.md  TEST_FIXES_COMPLETE.md  TEST_RESULTS.md  TEST_SUMMARY.md  TROUBLESHOOTING.md  UI_TESTING_GUIDE.md  UI_TEST_100_PERCENT.md  VERIFICATION.md  WORKING_COMMANDS.md  playwright.config.py  pyproject.toml  pytest.ini  (+3 more)
docs/: ARCHITECTURE.md  INDEX.md
notebooks/: example_analysis.py
tests/: __init__.py  conftest.py  test_clinical_data.py  test_clinical_features.py  test_clinical_parser.py  test_cluster_risk.py  test_eligibility.py  test_eligibility_new.py  test_email_alerts.py  test_emr_integration.py  test_enrollment.py  test_features.py  test_features_new.py  test_financial_info.py  test_integration.py  test_models.py  test_models_new.py  test_normalize_new.py  test_pipeline_integration.py  test_referral.py  test_risk.py  test_safety_parser.py  test_search_profiles.py  test_similar_patients.py  test_streamlit_e2e.py  test_trial_notes.py  test_ui_advanced_features.py  test_ui_explore_tab.py  (+10 more)
(+39 files in other folders)
